Add a key to identify each question
Based on the mapping here: https://github.com/alphagov/supplier-submission-portal/blob/master/app/uk/gov/gds/dm/KeyMapper.java

This lets any other app look up data from this content. There is lots
of good stuff in this repo, including, but not limited to:
- The name of a question
- The validation messages that the SSP used
- The label of a question when it's presented as a filter
- Which questions depend on which lots
- Whether individual options (e.g. EU, UK, USA, other) should be
  displayed as filters

Adding these keys means that any app that currently speaks these
keys (Thermos, data API) will be able to make use of the content.

There may be a better way of managing information than this repo,
but for now I think the keys give an abstraction that would allow
the easy swapping-out of a different format of content.

--- a/service/access.yml
+++ b/service/access.yml
@@ -1,5 +1,6 @@
 Access:
   Supported web browsers:
+    key: supportedBrowsers
     dependsOnLots: SaaS, PaaS, IaaS
     hint: "Choose all that apply."
     fields:
@@ -32,12 +33,14 @@ Access:
         filterLabel: Opera
     validationNotAnswered: "This question requires an answer."
   Offline working and syncing supported:
+    key: offlineWorking
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         filterLabel: Offline working and syncing supported
     validationNotAnswered: "This question requires an answer."
   Supported devices:
+    key: supportedDevices
     dependsOnLots: SaaS, PaaS, IaaS
     hint: "Choose all that apply."
     fields:
