--- a/service/certifications.yml
+++ b/service/certifications.yml
@@ -1,5 +1,6 @@
 Certifications:
   Vendor certification(s):
+    key: vendorCertifications
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     hint: "Examples of certifications include VMware Certified Professional and Oracle Gold Partner. (Optional.)"
     listItemName: "certification example"
