--- a/service/code-libraries.yml
+++ b/service/code-libraries.yml
@@ -1,5 +1,6 @@
 Code libraries:
   Languages your code libraries are written in:
+    key: codeLibraryLanguages
     dependsOnLots: SaaS
     hint: "Examples of code libraries include AWS Ruby SDK and Stripe-Java. Examples of languages include PHP and Python. (Maximum 10 languages.) (Optional.) "
     listItemName: "code libraries example"
