--- a/service/security/configuration-and-change-management.yml
+++ b/service/security/configuration-and-change-management.yml
@@ -1,5 +1,6 @@
 Configuration and change management:
   "Configuration and change management tracking":
+    key: configurationTracking
     requirements: Consumers should have confidence that the status, location and configuration of service components (including hardware and software components) are tracked throughout their lifetime within the service.
     filters: Consumers should have confidence that the status, location and configuration of service components (including hardware and software components) are tracked throughout their lifetime within the service.
     hint: "Do you track the status, location and configuration of service components throughout their lifetime?"
@@ -10,6 +11,7 @@ Configuration and change management:
         filterLabel: Configuration and change management tracking
     validationNotAnswered: "This question requires an answer."
   "Change impact assessment":
+    key: changeImpactAssessment
     requirements: Consumers should have confidence that changes to the service are assessed for potential security impact. Changes are managed and tracked through to completion.
     filters: Consumers should have confidence that changes to the service are assessed for potential security impact. Changes are managed and tracked through to completion.
     hint: "Are changes to the service assessed for potential security impact, and are changes managed and tracked through to completion?"
