--- a/service/security/supply-chain-security.yml
+++ b/service/security/supply-chain-security.yml
@@ -1,5 +1,6 @@
 Supply-chain security:
   "Visibility of data shared with third-party suppliers":
+    key: thirdPartyDataSharingInformation
     requirements: The consumer understands and accepts how their information is shared with, or accessible by, third party suppliers and their supply chains.
     filters: The consumer understands and accepts how their information is shared with, or accessible by, third party suppliers and their supply chains.
     hint: "Do you inform consumers how much of their information is shared with, or accessible by, third-party suppliers and their supply chains?"
@@ -10,6 +11,7 @@ Supply-chain security:
         filterLabel: Visibility of data shared with third-party suppliers
     validationNotAnswered: "This question requires an answer."
   "Third-party supplier security requirements":
+    key: thirdPartySecurityRequirements
     requirements: The consumer understands and accepts how the service provider’s procurement processes place security requirements on third party suppliers and delivery partners.
     filters: The consumer understands and accepts how the service provider’s procurement processes place security requirements on third party suppliers and delivery partners.
     hint: "Do you ensure that relevant security requirements, such as the Cloud Security Principles, are placed on third-party suppliers and delivery partners?"
@@ -20,6 +22,7 @@ Supply-chain security:
         filterLabel: Third-party supplier security requirements
     validationNotAnswered: "This question requires an answer."
   "Third-party supplier risk assessment":
+    key: thirdPartyRiskAssessment
     requirements: The consumer understands and accepts how the service provider manages security risks from third party suppliers and delivery partners.
     filters: The consumer understands and accepts how the service provider manages security risks from third party suppliers and delivery partners.
     hint: "Do you manage the risks to your service from third-party suppliers and delivery partners?"
@@ -30,6 +33,7 @@ Supply-chain security:
         filterLabel: Third-party supplier risk assessment
     validationNotAnswered: "This question requires an answer."
   "Third-party supplier compliance monitoring":
+    key: thirdPartyComplianceMonitoring
     requirements: The consumer understands and accepts how the service provider manages the conformance of their suppliers with security requirements.
     filters: The consumer understands and accepts how the service provider manages the conformance of their suppliers with security requirements.
     hint: "Do you manage your third-party suppliers' compliance with relevant security requirements?"
@@ -40,6 +44,7 @@ Supply-chain security:
         filterLabel: Third-party supplier compliance monitoring
     validationNotAnswered: "This question requires an answer."
   "Hardware and software verification":
+    key: hardwareSoftwareVerification
     requirements: The consumer understands and accepts how the service provider verifies that hardware and software used in the service is genuine and has not been tampered with.
     filters: The consumer understands and accepts how the service provider verifies that hardware and software used in the service is genuine and has not been tampered with.
     hint: "Do you verify that the hardware and software used in the service are genuine and have not been obviously tampered with?"
