--- a/service/cloud-features.yml
+++ b/service/cloud-features.yml
@@ -1,17 +1,20 @@
 Cloud features:
   Elastic cloud approach supported:
+    key: elasticCloud
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         filterLabel: Elastic cloud approach supported
     validationNotAnswered: "This question requires an answer."
   Guaranteed resources defined:
+    key: guaranteedResources
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         filterLabel: Guaranteed resources defined
     validationNotAnswered: "This question requires an answer."
   Persistent storage supported:
+    key: persistantStorage
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
