--- a/service/networks-and-connectivity.yml
+++ b/service/networks-and-connectivity.yml
@@ -1,5 +1,6 @@
 Networks and connectivity:
   Networks the service is directly connected to:
+    key: networksConnected
     dependsOnLots: SaaS, PaaS, IaaS
     mockAnswer: Internet
     hint: "Choose all that apply."
