--- a/service/onboarding-and-offboarding.yml
+++ b/service/onboarding-and-offboarding.yml
@@ -1,11 +1,13 @@
 Onboarding and offboarding:
   Service onboarding process included:
+    key: serviceOnboarding
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         filterLabel: Service onboarding process included
     validationNotAnswered: "This question requires an answer."
   Service offboarding process included:
+    key: serviceOffboarding
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
