--- a/service/open-standards.yml
+++ b/service/open-standards.yml
@@ -1,5 +1,6 @@
 Open standards:
   Open standards supported and documented:
+    key: openStandardsSupported
     dependsOnLots: SaaS, PaaS, IaaS
     hint: "Take a look at the GOV.UK Open Standards principles for more information on open standards."
     fields:
