--- a/service/provisioning.yml
+++ b/service/provisioning.yml
@@ -1,17 +1,20 @@
 Provisioning:
   Self-service provisioning supported:
+    key: selfServiceProvisioning
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         filterLabel: Self-service provisioning supported
     validationNotAnswered: "This question requires an answer."
   Service provisioning time:
+    key: provisioningTime
     dependsOnLots: SaaS, PaaS, IaaS
     hint: "How long does it take to get your service up and running? For example 1 to 5 hours, 2 to 3 days."
     fields:
       - type: text
     validationNotAnswered: "This question requires an answer."
   Service deprovisioning time:
+    key: deprovisioningTime
     dependsOnLots: SaaS, PaaS, IaaS
     hint: ""
     fields:
