--- a/service/security/personnel-security.yml
+++ b/service/security/personnel-security.yml
@@ -1,5 +1,6 @@
 Personnel security:
   "Personnel security checks":
+    key: personnelSecurityChecks
     requirements: Consumers should be content with the level of security screening conducted on service provider staff with access to their information or with ability to affect their service.
     filters: Consumers should be content with the level of security screening conducted on service provider staff with access to their information or with ability to affect their service.
     hint: "What kind of personnel security do you apply to staff who have access to the service? Choose all that apply."
