--- a/service/security/secure-development.yml
+++ b/service/security/secure-development.yml
@@ -1,5 +1,6 @@
 Secure development:
   "Secure development":
+    key: secureDevelopment
     requirements: Consumers should be sufficiently confident that new and evolving threats are reviewed and the service improved in line with them.
     filters: Consumers should be sufficiently confident that new and evolving threats are reviewed and the service improved in line with them.
     hint: "Are new and evolving threats reviewed and your services improved accordingly?"
@@ -10,6 +11,7 @@ Secure development:
         filterLabel: Secure development
     validationNotAnswered: "This question requires an answer."
   "Secure design, coding, testing and deployment":
+    key: secureDesign
     requirements: Consumers should be sufficiently confident that development is carried out in line with industry good practice regarding secure design, coding, testing and deployment.
     filters: Consumers should be sufficiently confident that development is carried out in line with industry good practice regarding secure design, coding, testing and deployment.
     hint: "Is development carried out in line with industry good practice regarding secure design, coding, testing and deployment?"
@@ -20,6 +22,7 @@ Secure development:
         filterLabel: Secure design, coding, testing and deployment
     validationNotAnswered: "This question requires an answer."
   "Software configuration management":
+    key: secureConfigurationManagement
     requirements: Consumers should be sufficiently confident that configuration management processes are in place to ensure the integrity of the solution through development, testing and deployment.
     filters: Consumers should be sufficiently confident that configuration management processes are in place to ensure the integrity of the solution through development, testing and deployment.
     hint: "Do you have configuration management in place to ensure the integrity of the service through development, testing and deployment?"
