--- a/service/security/secure-service-administration.yml
+++ b/service/security/secure-service-administration.yml
@@ -1,5 +1,6 @@
 Secure service administration:
   "Service management model":
+    key: serviceManagementModel
     requirements: Consumers have sufficient confidence that the technical approach the service provider uses to manage the service does not put their data or service at risk.
     filters: Consumers have sufficient confidence that the technical approach the service provider uses to manage the service does not put their data or service at risk.
     hint: "Which technical approach do you use for your service management? Choose 1."
