--- a/service/security/separation-and-access-control-within-management-interfaces.yml
+++ b/service/security/separation-and-access-control-within-management-interfaces.yml
@@ -1,5 +1,6 @@
 Separation and access control within management interfaces:
   "User access control within management interfaces":
+    key: userAccessControlManagement
     requirements: The consumer has sufficient confidence that other consumers cannot access, modify or otherwise affect their service management.
     filters: The consumer has sufficient confidence that other consumers cannot access, modify or otherwise affect their service management.
     hint: "Can consumers manage only their own service, and not access, modify or otherwise affect the service of other consumers via management tools and interfaces?"
@@ -10,6 +11,7 @@ Separation and access control within management interfaces:
         filterLabel: User access control within management interfaces
     validationNotAnswered: "This question requires an answer."
   "Administrator permissions":
+    key: restrictAdministratorPermissions
     requirements: The consumer can manage the risks of their own privileged access, e.g. through ‘principle of least privilege’, providing the ability to constrain permissions given to consumer administrators.
     filters: The consumer can manage the risks of their own privileged access, e.g. through ‘principle of least privilege’, providing the ability to constrain permissions given to consumer administrators.
     hint: "Can consumers restrict permissions given to their administrators?"
@@ -20,6 +22,7 @@ Separation and access control within management interfaces:
         filterLabel: Administrator permissions
     validationNotAnswered: "This question requires an answer."
   "Management interface protection":
+    key: managementInterfaceProtection
     requirements: The consumer understands how management interfaces are protected (see Principle 11) and what functionality is available via those interfaces.
     filters: The consumer understands how management interfaces are protected (see Principle 11) and what functionality is available via those interfaces.
     hint: "Do you tell consumers what functionality and protection is available for management interfaces?"
