--- a/service/service-type-IaaS.yml
+++ b/service/service-type-IaaS.yml
@@ -1,5 +1,6 @@
 Service type:
   Choose the categories that apply to your service:
+    key: serviceTypes
     dependsOnLots: IaaS
     hint: "You can choose multiple categories."
     mockAnswer: Compute
