--- a/service/service-type-SaaS.yml
+++ b/service/service-type-SaaS.yml
@@ -1,5 +1,6 @@
 Service type:
   Choose the categories that apply to your service:
+    id: serviceTypes
     dependsOnLots: SaaS
     hint: "You can choose multiple categories"
     mockAnswer: Content management system
